--- a/src/renderer/App.css
+++ b/src/renderer/App.css
@@ -4,19 +4,10 @@
  */
 body {
   position: relative;
-  color: white;
-  height: 100vh;
-  background: linear-gradient(
-    200.96deg,
-    #fedc2a -29.09%,
-    #dd5789 51.77%,
-    #7a2c9e 129.35%
-  );
+  color: black;
+  min-height: 100vh;
   font-family: sans-serif;
-  overflow-y: hidden;
-  display: flex;
-  justify-content: center;
-  align-items: center;
+  margin: 0;
 }
 
 button {
